# deepavraman.com

./: .gitignore  package-lock.json  pelicanconf.py  pyproject.toml  requirements.txt  tailwind.config.js
content/: 20130420-hero-turns-villain.rst  20130720-triple-treat.rst  20220828-kollywood-break-ms-krsna.rst  20220923-art-exhibition-sprouts.rst  20230818-shrota-house.rst  20240103-carnatic-music-gen-z.rst
theme/spotlight/static/css/: main.css
theme/spotlight/templates/: archives.html  article.html  articles_list.html  author.html  authors.html  base.html  categories.html  category.html  index.html  pagination.html  period_archives.html  tag.html  tags.html
