[project]
name = "deepavraman-pelican-blog"
version = "1.0"
authors = [{ name = "Deepa V" }]
description = "Contents for deepavraman.com website"
requires-python = ">=3.10"
dependencies = [
    "pelican ~= 4.9.1",
    "pelican-seo ~= 1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
